fixed formatting with projects

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - MyResume Bootstrap Template</title>
+  <title>Pranav Palle - Personal Website Homepage</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <link rel="icon" href="assets/img/portfolio/favicon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -95,7 +96,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/Pranav-Palle-Headshot.png" class="img-fluid" alt="">
+            <img src="assets/img/Pranav-Palle-Headshot.png" class="img-fluid" alt="Pranav Palle">
           </div>
           <div class="col-lg-8 content">
             <h2>Software Developer &amp; Data Analyst</h2>
@@ -249,7 +250,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item item-cyan position-relative">
               <div>
-                <img src="assets/img/sql.png" height="100" width="80">                                  
+                <img src="assets/img/sql.png" height="100" width="80" alt="SQL">                                  
               </div>
               <br />
               <h3>SQL</h3>
@@ -414,22 +415,24 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Inovalon - Associate Software Engineering Intern</h4>
-              <h5>June 2024 - August 2024</h5>
+              <h4>Inovalon</h4>
+              <h5>Associate Software Engineering Intern</h5>
+              <p>June 2024 - August 2024</p>
               <p><em> Remote </em></p>
               <ul>
-                <li>Deployed Airflow code to AWS following CI/CD practices to ensure successful integration of DAG changes</li>           
+                <li>Tech Stacks: Microsoft Power BI, Snowflake, Airflow, CI/CD, AWS</li>           
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>App Dev Club x US News - Project Engineer</h4>
-              <h5>January 2024 - May 2024</h5>
-              <p><em>College Park, MD</em></p>
+              <h4>App Development Club &amp; US News</h4>
+              <h5>Project Engineer</h5>
+              <p>January 2024 - May 2024</p>
+              <p><em> College Park, MD </em></p>
               <ul>
-                <li>Internal QA application</li>
+                <li>Tech Stacks: Typescript, React JS, Figma, Tanstack</li>           
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
           </div>
 
@@ -575,13 +578,14 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
-              <img src="assets/img/projects/perloan.png">
+              <img src="assets/img/projects/perloan.png" class="object-fit-image" alt="PerLoan - Pranav Palle Hackathon Project">
               <br>
               <br>
               <a href="https://devpost.com/software/perloan" target="_blank" class="stretched-link">
                 <h3>PerLoan</h3>
               </a>
-              <p>BitCamp MLH Hackathon - Winner of Best Use of PropelAuth</p>
+              <p><i class="bi bi-trophy"></i>  BitCamp Major League Hackathon - Winner of Best Use of PropelAuth</p>
+              <br>
               <p>PerLoan is a revolutionary peer-to-peer lending service which allows people to request loans from others at a lower interest rate than traditional banks and credit cards, decreasing the burden on them, while also providing lenders with a way to grow their savings.</p>
               <br>
               <div class="social-links d-flex justify-content-center">
@@ -593,7 +597,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
-              <img src="assets/img/projects/readanize.png">
+              <img src="assets/img/projects/readanize.png" class="object-fit-image" alt="Readanize - Pranav Palle CS50X Final Project">
               <br>
               <br>
               <a href="" class="stretched-link">
@@ -646,7 +650,7 @@
               <div class="testimonial-item">
                 <div class="row gy-4 justify-content-center">
                   <div class="col-lg-2 text-center">
-                    <img src="assets/img/certifications/CS50X.png" class="img-fluid" alt="">
+                    <img src="assets/img/certifications/CS50X.png" class="img-fluid object-fit-image" alt="">
                   </div>
                   <div class="col-lg-6">
                     <div class="testimonial-content">
