--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
+        <p> Preview of the some of my experiences and education. </p>
       </div><!-- End Section Title -->
 
       <div class="container">
