--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     </section><!-- /Services Section -->
 
     <!-- Issues: needs to overflow or loop around to front; center of screen  -->
-    <section id="carousel">
+    <!-- <section id="carousel">
       <div class="wrapper"> 
         <i id="left" class="bi bi-chevron-left"></i> 
         <ul class="carousel"> 
@@ -451,7 +451,7 @@
         </ul> 
         <i id="right" class="bi bi-chevron-right"></i> 
     </div> 
-    </section>
+    </section> -->
 
     <!-- Resume Section -->
     <section id="resume" class="resume section">
@@ -884,7 +884,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="contact.php" method="post" id="contact-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
