--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="contact.php" method="post" id="contact-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="contact.php" method="post" id="contact-form" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
